# python-140-bench

./: .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json
